--- a/TraceProject/TraceProject.csproj
+++ b/TraceProject/TraceProject.csproj
@@ -9,4 +9,10 @@
     <ProjectReference Include="..\MatrixProject\MatrixProject.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
